chore: Ajout décodage nom si nécessaire